syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "nem";
option java_outer_classname = "RelationshipNodeTypeEntityConfig";

package nem;



message RelationshipNodeTypeEntityConfig {  
    string entity_uuid = 1;
    repeated string field_uuids = 2;
    bool fields_generated = 3;    
}
